--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ html {
   box-sizing: inherit;
 }
 body {
-  margin: 0;
+  margin: auto;
+  width:1200px;
   padding: 0;
   font-family: 'Roboto', sans-serif;
 }
