Add typechecking with React.PropTypes

--- a/src/App.css
+++ b/src/App.css
@@ -108,7 +108,7 @@ body, .app {
   padding: 5px 0;
   background: #d4d4d4;
   text-align: center;
-  color: #f00
+  color: #000
 }
 
 /* books grid */
