--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,16 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
+
 body {
   margin: auto;
-  width:1200px;
+  max-width: 1200px;
   padding: 0;
   font-family: 'Roboto', sans-serif;
 }
